--- a/vignettes/PSIndependenceTest.Rmd
+++ b/vignettes/PSIndependenceTest.Rmd
@@ -89,8 +89,8 @@ Mod2.stat(GenTab2(matrix(1/12, nrow = 3, ncol = 4), 60))
 This function returns the critical value of the modular independence test in the two-way contingency table.
 
 ```{r}
-Mod2.cv(2, 2, 40, 0.05) #related to table1
-Mod2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
+Mod2.cv(2, 2, 40, 0.05, B = 1e3) #related to table1
+Mod2.cv(2, 3, 25, 0.1, B = 1e4) #related to table2
 ```
 
 **Mod2.pvalue**
@@ -98,8 +98,8 @@ Mod2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
 This function returns the p-value of the modular independence test in the two-way contingency table.
 
 ```{r}
-Mod2.pvalue(Mod2.stat(table1), 2, 2, 40)
-Mod2.pvalue(Mod2.stat(table2), 2, 3, 40, B = 5*1e3)
+Mod2.pvalue(Mod2.stat(table2), 2, 2, 40, B = 1e3)
+Mod2.pvalue(Mod2.stat(table2), 2, 3, 40, B = 1e4)
 ```
 
 **Mod2.test**
@@ -107,8 +107,8 @@ Mod2.pvalue(Mod2.stat(table2), 2, 3, 40, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Mod2.test(table1)
-Mod2.test(table1, B = 7*1e3)
+Mod2.test(table1, B = 1e3)
+Mod2.test(table1, B = 1e4)
 ```
 
 **Lms2.stat**
@@ -125,8 +125,8 @@ Lms2.stat(GenTab2(matrix(1/12, nrow = 3, ncol = 4), 60))
 This function returns the critical value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Lms2.cv(2, 2, 40, 0.05) #related to table1
-Lms2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
+Lms2.cv(2, 2, 40, 0.05, B = 1e3) #related to table1
+Lms2.cv(2, 3, 25, 0.1, B = 1e4) #related to table2
 ```
 
 **Lms2.pvalue**
@@ -134,8 +134,8 @@ Lms2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
 This function returns the p-value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Lms2.pvalue(Lms2.stat(table1), 2, 2, 40)
-Lms2.pvalue(Lms2.stat(table2), 2, 3, 40, B = 5*1e3)
+Lms2.pvalue(Lms2.stat(table1), 2, 2, 40, B = 1e3)
+Lms2.pvalue(Lms2.stat(table2), 2, 3, 40, B = 1e4)
 ```
 
 **Lms2.test**
@@ -143,8 +143,8 @@ Lms2.pvalue(Lms2.stat(table2), 2, 3, 40, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Lms2.test(table1)
-Lms2.test(table1, B = 7*1e3)
+Lms2.test(table1, B = 1e3)
+Lms2.test(table1, B = 1e4)
 ```
 
 **GenTab3**
@@ -170,8 +170,8 @@ Mod3.stat(GenTab3(array(1/12, dim=c(2,2,3)), 60))
 This function returns the critical value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.cv(2, 3, 4, 100, 0.05) #related to table4
-Mod3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
+Mod3.cv(2, 3, 4, 100, 0.05, B = 1e3) #related to table4
+Mod3.cv(2, 3, 4, 100, 0.1, B = 1e4) #related to table4
 ```
 
 **Mod3.pvalue**
@@ -179,8 +179,8 @@ Mod3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
 This function returns the p-value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100)
-Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 5*1e3)
+Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 1e3)
+Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 1e4)
 ```
 
 **Mod3.test**
@@ -188,8 +188,8 @@ Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 5*1e3)
 This function returns the test statistic and p-value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.test(table4)
-Mod3.test(table4, B = 5*1e3)
+Mod3.test(table4, B = 1e3)
+Mod3.test(table4, B = 1e4)
 ```
 
 **Lms3.stat**
@@ -206,8 +206,8 @@ Lms3.stat(GenTab3(array(1/27, dim = c(3, 3, 3)), 100))
 This function returns the critical value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
-Lms3.cv(2, 3, 4, 100, 0.05) #related to table4
-Lms3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
+Lms3.cv(2, 3, 4, 100, 0.05, B = 1e3) #related to table4
+Lms3.cv(2, 3, 4, 100, 0.1, B = 1e4) #related to table4
 ```
 
 **Lms3.pvalue**
@@ -215,8 +215,8 @@ Lms3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
 This function returns the p-value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
-Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 100)
-Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 40, B = 5*1e3)
+Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 100, B = 1e3)
+Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 40, B = 1e4)
 ```
 
 **Lms3.test**
@@ -224,8 +224,8 @@ Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 40, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
-Lms3.test(table4)
-Lms3.test(table4, B = 3*1e3)
+Lms3.test(table4, B = 1e3)
+Lms3.test(table4, B = 1e4)
 ```
 
 **GenTab4**
@@ -251,8 +251,8 @@ Mod4.stat(table6)
 This function returns the critical value of the modular independence test in the four-way contingency table.
 
 ```{r}
-Mod4.cv(2, 2, 2, 2, 100, 0.05) #related to table6
-Mod4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
+Mod4.cv(2, 2, 2, 2, 100, 0.05, B = 1e3) #related to table6
+Mod4.cv(2, 2, 2, 2, 100, 0.1, B = 1e4) #related to table6
 ```
 
 **Mod4.pvalue**
@@ -260,8 +260,8 @@ Mod4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
 This function returns the p-value of the modular independence test in the four-way contingency table.
 
 ```{r}
-Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100)
-Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
+Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 1e3)
+Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 1e4)
 ```
 
 **Mod4.test**
@@ -269,8 +269,8 @@ Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
 This function returns the test statistic and p-value of the modular independence test in the -way contingency table.
 
 ```{r}
-Mod4.test(table6)
-Mod4.test(table6, B = 5*1e3)
+Mod4.test(table6, B = 1e3)
+Mod4.test(table6, B = 1e4)
 ```
 
 **Lms4.stat**
@@ -287,8 +287,8 @@ Lms4.stat(table6)
 This function returns the critical value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.cv(2, 2, 2, 2, 100, 0.05) #related to table6
-Lms4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
+Lms4.cv(2, 2, 2, 2, 100, 0.05, B = 1e3) #related to table6
+Lms4.cv(2, 2, 2, 2, 100, 0.1, B = 1e4) #related to table6
 ```
 
 **Lms4.pvalue**
@@ -296,8 +296,8 @@ Lms4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
 This function returns the p-value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100)
-Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
+Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 1e3)
+Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 1e4)
 ```
 
 **Lms4.test**
@@ -305,7 +305,7 @@ Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.test(table6)
-Lms4.test(table6, B = 3*1e3)
+Lms4.test(table6, B = 1e3)
+Lms4.test(table6, B = 1e4)
 ```
 
