--- a/README.Rmd
+++ b/README.Rmd
@@ -10,12 +10,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-# PSIndependenceTest: Independence tests for two-way, three-way anf four-way contingency table
+# PSIndependenceTest: Independence Tests For Two-way, Three-way And Four-way Contingency Tables
 **author: Piotr Sulewski, Pomeranian University**
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of the PSIndependenceTest package is to put into practice the modular and logarithmic minimum tests for independence in two-way, three-way and four-way contingency tables. Statistic value, cv value and p-value are calculated. This package also includes three table generation functions and six data sets. To read more about the package please see (and cite :)) papers:
+The goal of the package is to put into practice the modular and logarithmic minimum tests for independence in two-way, three-way and four-way contingency tables. Statistic value, cv value and p-value are calculated. This package also includes three table generation functions and six data sets. To read more about the package please see (and cite :)) papers:
 
 Sulewski, P. (2016). Moc testów niezależności w tablicy dwudzielczej większej niż 2×2. Przegląd statystyczny 63(2), 190-210.
 
@@ -82,8 +82,8 @@ Mod2.stat(GenTab2(matrix(1/12, nrow = 3, ncol = 4), 60))
 This function returns the critical value of the modular independence test in the two-way contingency table.
 
 ```{r}
-Mod2.cv(2, 2, 40, 0.05) #related to table1
-Mod2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
+Mod2.cv(2, 2, 40, 0.05, B = 1e3) 
+Mod2.cv(2, 3, 25, 0.1, B = 1e4) 
 ```
 
 **Mod2.pvalue**
@@ -91,8 +91,8 @@ Mod2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
 This function returns the p-value of the modular independence test in the two-way contingency table.
 
 ```{r}
-Mod2.pvalue(Mod2.stat(table1), 2, 2, 40)
-Mod2.pvalue(Mod2.stat(table2), 2, 3, 40, B = 5*1e3)
+Mod2.pvalue(Mod2.stat(table1), 2, 2, 40, B = 1e3)
+Mod2.pvalue(Mod2.stat(table2), 2, 3, 40, B = 1e4)
 ```
 
 **Mod2.test**
@@ -100,8 +100,8 @@ Mod2.pvalue(Mod2.stat(table2), 2, 3, 40, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Mod2.test(table1)
-Mod2.test(table1, B = 7*1e3)
+Mod2.test(table1, B = 1e3)
+Mod2.test(table1, B = 1e4)
 ```
 
 **Lms2.stat**
@@ -118,8 +118,8 @@ Lms2.stat(GenTab2(matrix(1/12, nrow = 3, ncol = 4), 60))
 This function returns the critical value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Lms2.cv(2, 2, 40, 0.05) #related to table1
-Lms2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
+Lms2.cv(2, 2, 40, 0.05, B = 1e3) 
+Lms2.cv(2, 3, 25, 0.1, B = 1e4) 
 ```
 
 **Lms2.pvalue**
@@ -127,8 +127,8 @@ Lms2.cv(2, 3, 25, 0.1, B = 5*1e4) #related to table2
 This function returns the p-value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Lms2.pvalue(Lms2.stat(table1), 2, 2, 40)
-Lms2.pvalue(Lms2.stat(table2), 2, 3, 40, B = 5*1e3)
+Lms2.pvalue(Lms2.stat(table1), 2, 2, 40, B = 1e3)
+Lms2.pvalue(Lms2.stat(table2), 2, 3, 40, B = 1e4)
 ```
 
 **Lms2.test**
@@ -136,8 +136,8 @@ Lms2.pvalue(Lms2.stat(table2), 2, 3, 40, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the two-way contingency table.
 
 ```{r}
-Lms2.test(table1)
-Lms2.test(table1, B = 7*1e3)
+Lms2.test(table1, B = 1e3)
+Lms2.test(table1, B = 1e4)
 ```
 
 **GenTab3**
@@ -163,8 +163,8 @@ Mod3.stat(GenTab3(array(1/12, dim=c(2,2,3)), 60))
 This function returns the critical value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.cv(2, 3, 4, 100, 0.05) #related to table4
-Mod3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
+Mod3.cv(2, 3, 4, 100, 0.05, B = 1e3) 
+Mod3.cv(2, 3, 4, 100, 0.1, B = 1e4) 
 ```
 
 **Mod3.pvalue**
@@ -172,8 +172,8 @@ Mod3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
 This function returns the p-value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100)
-Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 5*1e3)
+Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 1e3)
+Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 1e4)
 ```
 
 **Mod3.test**
@@ -181,8 +181,8 @@ Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100, B = 5*1e3)
 This function returns the test statistic and p-value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.test(table4)
-Mod3.test(table4, B = 5*1e3)
+Mod3.test(table4, B = 1e3)
+Mod3.test(table4, B = 1e4)
 ```
 
 **Lms3.stat**
@@ -199,8 +199,8 @@ Lms3.stat(GenTab3(array(1/27, dim = c(3, 3, 3)), 100))
 This function returns the critical value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
-Lms3.cv(2, 3, 4, 100, 0.05) #related to table4
-Lms3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
+Lms3.cv(2, 3, 4, 100, 0.05, B = 1e3) 
+Lms3.cv(2, 3, 4, 100, 0.1, B = 1e4) 
 ```
 
 **Lms3.pvalue**
@@ -208,8 +208,8 @@ Lms3.cv(2, 3, 4, 100, 0.1, B = 5*1e3) #related to table4
 This function returns the p-value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
-Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 100)
-Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 40, B = 5*1e3)
+Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 100, B = 1e3)
+Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 40, B = 1e4)
 ```
 
 **Lms3.test**
@@ -217,8 +217,8 @@ Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 40, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
-Lms3.test(table4)
-Lms3.test(table4, B = 3*1e3)
+Lms3.test(table4, B = 1e3)
+Lms3.test(table4, B = 1e4)
 ```
 
 **GenTab4**
@@ -244,8 +244,8 @@ Mod4.stat(table6)
 This function returns the critical value of the modular independence test in the four-way contingency table.
 
 ```{r}
-Mod4.cv(2, 2, 2, 2, 100, 0.05) #related to table6
-Mod4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
+Mod4.cv(2, 2, 2, 2, 100, 0.05, B = 1e3)
+Mod4.cv(2, 2, 2, 2, 100, 0.1, B = 1e4)
 ```
 
 **Mod4.pvalue**
@@ -253,8 +253,8 @@ Mod4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
 This function returns the p-value of the modular independence test in the four-way contingency table.
 
 ```{r}
-Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100)
-Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
+Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 1e3)
+Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 1e4)
 ```
 
 **Mod4.test**
@@ -262,8 +262,8 @@ Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
 This function returns the test statistic and p-value of the modular independence test in the -way contingency table.
 
 ```{r}
-Mod4.test(table6)
-Mod4.test(table6, B = 5*1e3)
+Mod4.test(table6, B = 1e3)
+Mod4.test(table6, B = 1e4)
 ```
 
 **Lms4.stat**
@@ -280,8 +280,8 @@ Lms4.stat(table6)
 This function returns the critical value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.cv(2, 2, 2, 2, 100, 0.05) #related to table6
-Lms4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
+Lms4.cv(2, 2, 2, 2, 100, 0.05, B = 1e3) 
+Lms4.cv(2, 2, 2, 2, 100, 0.1, B = 1e4) 
 ```
 
 **Lms4.pvalue**
@@ -289,8 +289,8 @@ Lms4.cv(2, 2, 2, 2, 100, 0.1, B = 5*1e3) #related to table6
 This function returns the p-value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100)
-Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
+Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 1e3)
+Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 1e4)
 ```
 
 **Lms4.test**
@@ -298,6 +298,6 @@ Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 100, B = 5*1e3)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.test(table6)
-Lms4.test(table6, B = 3*1e3)
+Lms4.test(table6, B = 1e3)
+Lms4.test(table6, B = 1e4)
 ```
