--- a/vignettes/PSIndependenceTest.Rmd
+++ b/vignettes/PSIndependenceTest.Rmd
@@ -34,9 +34,10 @@ Sulewski, P. (2021). Logarithmic Minimum Test for Independence in Three Way Con-
 You can install the development version of **PSIndependenceTest** from [GitHub](https://github.com/) with:
 
 ```{r}
-library(remotes)
+library("remotes")
 remotes::install_github("PiotrSule/PSIndependenceTest")
 ```
+
 
 **This package includes four data sets** 
   
