--- a/vignettes/PSIndependenceTest.Rmd
+++ b/vignettes/PSIndependenceTest.Rmd
@@ -83,7 +83,7 @@ This function returns the statistic value of the modular independence test in th
 
 ```{r}
 Mod2.stat(table1)
-Mod2.stat(GenTab2(matrix(1/12, nrow = 3, ncol = 4), 60))
+Mod2.stat(GenTab2(matrix(1/9, nrow = 3, ncol = 3), 90))
 ```
 
 **Mod2.cv**
@@ -92,7 +92,7 @@ This function returns the critical value of the modular independence test in the
 
 ```{r}
 Mod2.cv(2, 2, 40, 0.05, B = 1e3) 
-Mod2.cv(2, 3, 25, 0.1) 
+Mod2.cv(2, 3, 60, 0.1) 
 ```
 
 **Mod2.pvalue**
@@ -101,7 +101,7 @@ This function returns the p-value of the modular independence test in the two-wa
 
 ```{r}
 Mod2.pvalue(Mod2.stat(table1), 2, 2, 40, B = 1e3)
-Mod2.pvalue(Mod2.stat(table2), 2, 3, 40)
+Mod2.pvalue(Mod2.stat(table2), 2, 3, 60)
 ```
 
 **Mod2.test**
@@ -110,7 +110,7 @@ This function returns the test statistic and p-value of the logarithmic minimum 
 
 ```{r}
 Mod2.test(table1, B = 1e3)
-Mod2.test(table1)
+Mod2.test(table2)
 ```
 
 **Lms2.stat**
@@ -119,7 +119,7 @@ This function returns the statistic value of the logarithmic minimum independenc
 
 ```{r}
 Lms2.stat(table1)
-Lms2.stat(GenTab2(matrix(1/12, nrow = 3, ncol = 4), 60))
+Lms2.stat(GenTab2(matrix(1/9, nrow = 3, ncol = 3), 90))
 ```
 
 **Lms2.cv**
@@ -128,7 +128,7 @@ This function returns the critical value of the logarithmic minimum independence
 
 ```{r}
 Lms2.cv(2, 2, 40, 0.05, B = 1e3) 
-Lms2.cv(2, 3, 25, 0.1) 
+Lms2.cv(2, 3, 60, 0.1)  
 ```
 
 **Lms2.pvalue**
@@ -137,7 +137,7 @@ This function returns the p-value of the logarithmic minimum independence test i
 
 ```{r}
 Lms2.pvalue(Lms2.stat(table1), 2, 2, 40, B = 1e3)
-Lms2.pvalue(Lms2.stat(table2), 2, 3, 25)
+Lms2.pvalue(Lms2.stat(table2), 2, 3, 60)
 ```
 
 **Lms2.test**
@@ -164,7 +164,7 @@ This function returns the statistic value of the modular independence test in th
 
 ```{r}
 Mod3.stat(table3)
-Mod3.stat(GenTab3(array(1/12, dim=c(2,2,3)), 60))
+Mod3.stat(GenTab3(array(1/12, dim=c(2,2,3)), 120))
 ```
 
 **Mod3.cv**
@@ -172,8 +172,8 @@ Mod3.stat(GenTab3(array(1/12, dim=c(2,2,3)), 60))
 This function returns the critical value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.cv(2, 3, 4, 100, 0.05, B = 1e3) 
-Mod3.cv(2, 3, 4, 100, 0.1) 
+Mod3.cv(2, 2, 2, 80, 0.05, B = 1e3) 
+Mod3.cv(2, 2, 2, 80, 0.1) 
 ```
 
 **Mod3.pvalue**
@@ -181,8 +181,8 @@ Mod3.cv(2, 3, 4, 100, 0.1)
 This function returns the p-value of the modular independence test in the three-way contingency table.
 
 ```{r}
-Mod3.pvalue(Mod3.stat(table3), 2, 3, 4, 100, B = 1e3)
-Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100)
+Mod3.pvalue(Mod3.stat(table4), 2, 2, 2, 80, B = 1e3)
+Mod3.pvalue(Mod3.stat(table4), 2, 2, 2, 80)
 ```
 
 **Mod3.test**
@@ -190,17 +190,18 @@ Mod3.pvalue(Mod3.stat(table4), 2, 3, 4, 100)
 This function returns the test statistic and p-value of the modular independence test in the three-way contingency table.
 
 ```{r}
+Mod3.test(table4, B = 1e2)
 Mod3.test(table4, B = 1e3)
-Mod3.test(table4)
 ```
 
 **Lms3.stat**
   
 This function returns the statistic value of the logarithmic minimum independence test in the three-way contingency table.
 
+
 ```{r}
-Lms3.stat(table4)
-Lms3.stat(GenTab3(array(1/27, dim = c(3, 3, 3)), 100))
+Lms3.stat(table3)
+Lms3.stat(GenTab3(array(1/12, dim=c(2,2,3)), 120))
 ```
 
 **Lms3.cv**
@@ -208,17 +209,18 @@ Lms3.stat(GenTab3(array(1/27, dim = c(3, 3, 3)), 100))
 This function returns the critical value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
-Lms3.cv(2, 3, 4, 100, 0.05, B = 1e3) 
-Lms3.cv(2, 3, 4, 100, 0.1) 
+Lms3.cv(2, 2, 2, 80, 0.05, B = 1e2) 
+Lms3.cv(2, 2, 2, 80, 0.1, B = 1e3) 
 ```
 
 **Lms3.pvalue**
 
 This function returns the p-value of the logarithmic minimum independence test in the three-way contingency table.
 
+
 ```{r}
-Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 100, B = 1e3)
-Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 100)
+Lms3.pvalue(Lms3.stat(table4), 2, 2, 2, 80, B = 1e3)
+Lms3.pvalue(Lms3.stat(table4), 2, 2, 2, 80)
 ```
 
 **Lms3.test**
@@ -226,8 +228,8 @@ Lms3.pvalue(Lms3.stat(table4), 2, 3, 4, 100)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the three-way contingency table.
 
 ```{r}
+Lms3.test(table4, B = 1e2)
 Lms3.test(table4, B = 1e3)
-Lms3.test(table4)
 ```
 
 **GenTab4**
@@ -253,8 +255,8 @@ Mod4.stat(table6)
 This function returns the critical value of the modular independence test in the four-way contingency table.
 
 ```{r}
-Mod4.cv(2, 2, 2, 2, 100, 0.05, B = 1e3)
-Mod4.cv(2, 2, 2, 2, 100, 0.1)
+Mod4.cv(2, 2, 2, 2, 160, 0.05, B = 1e2)
+Mod4.cv(2, 2, 2, 2, 160, 0.1, B = 1e3)
 ```
 
 **Mod4.pvalue**
@@ -262,8 +264,8 @@ Mod4.cv(2, 2, 2, 2, 100, 0.1)
 This function returns the p-value of the modular independence test in the four-way contingency table.
 
 ```{r}
-Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 3, 100, B = 1e3)
-Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 3, 100)
+Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 160, B = 1e2)
+Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 2, 160, B = 1e3)
 ```
 
 **Mod4.test**
@@ -271,8 +273,8 @@ Mod4.pvalue(Mod4.stat(table6), 2, 2, 2, 3, 100)
 This function returns the test statistic and p-value of the modular independence test in the -way contingency table.
 
 ```{r}
+Mod4.test(table6, B = 1e2)
 Mod4.test(table6, B = 1e3)
-Mod4.test(table6)
 ```
 
 **Lms4.stat**
@@ -289,8 +291,8 @@ Lms4.stat(table6)
 This function returns the critical value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.cv(2, 2, 2, 2, 100, 0.05, B = 1e3) 
-Lms4.cv(2, 2, 2, 2, 100, 0.1) 
+Lms4.cv(2, 2, 2, 2, 160, 0.05, B = 1e2)
+Lms4.cv(2, 2, 2, 2, 160, 0.1, B = 1e3)
 ```
 
 **Lms4.pvalue**
@@ -298,8 +300,8 @@ Lms4.cv(2, 2, 2, 2, 100, 0.1)
 This function returns the p-value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
-Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 3, 100, B = 1e3)
-Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 3, 100)
+Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 160, B = 1e2)
+Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 2, 160, B = 1e3)
 ```
 
 **Lms4.test**
@@ -307,6 +309,6 @@ Lms4.pvalue(Lms4.stat(table6), 2, 2, 2, 3, 100)
 This function returns the test statistic and p-value of the logarithmic minimum independence test in the four-way contingency table.
 
 ```{r}
+Lms4.test(table6, B = 1e2)
 Lms4.test(table6, B = 1e3)
-Lms4.test(table6)
 ```
